changing the way dependency failures are handled